--- a/index.html
+++ b/index.html
@@ -2,52 +2,366 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Cute Pets Gallery (cpc)</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>PixelCraft - by D. S. Patra</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"><link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<h1>Cute Pets Gallery</h1>
-The Little Details #CodePenChallenge: Gallery Details
-<div class="gallery">
-  <figure class="imageRoll">
-    <i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i>
-      </i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i>
-    <figcaption>Kitten: <strong>Ollie</strong> (12 Weeks)</figcaption>
-  </figure>
+<h1 data-text="PixelCraft">PixelCraft</h1>
+<h2>Art and Crafts by D. Sinarani Patra</h2>
+<div id="mz-gallery-container">
 
-  <figure class="imageRoll">
-    <i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i>
-      </i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i>
-    <figcaption>Puppy: <strong>Barney</strong> (9 Weeks)</figcaption>
-  </figure>
+  <div id="mz-gallery">
 
-  <figure class="imageRoll">
-    <i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i>
-      </i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i>
-    <figcaption>Cat: <strong>Walter</strong> (5 Years) </figcaption>
-  </figure>
 
-  <figure class="imageRoll">
-    <i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i>
-      </i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i>
-    <figcaption>Dog: <strong>Miss Sunshine</strong> (2 Years) </figcaption>
-  </figure>
+<!-- Acrylic Paint 1 -->
+<figure>
+      <img src="./source/Acrylic1.jpeg" alt="Acrylic Paint 1" width="700" height="700">
+      <figcaption>Acrylic Paint 1</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
 
-  <figure class="imageRoll">
-    <i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i>
-      </i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i>
-    <figcaption>Kitten: <strong>Reese</strong> (8 Weeks)</figcaption>
-  </figure>
 
-  <figure class="imageRoll">
-    <i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i><i>
-      </i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i></i>
-    <figcaption>Puppy: <strong>Bruce</strong> (10 Weeks)</figcaption>
-  </figure>
+<!-- Acrylic Paint 2 -->
+<figure>
+      <img src="./source/Acrylic2.jpeg" alt="Acrylic Paint 2" width="700" height="700">
+      <figcaption>Acrylic Paint 2</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Acrylic Paint 3 -->
+<figure>
+      <img src="./source/Acrylic3.jpeg" alt="Acrylic Paint 3" width="700" height="700">
+      <figcaption>Acrylic Paint 3</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Acrylic Paint 4 -->
+<figure>
+      <img src="./source/Acrylic4.jpeg" alt="Acrylic Paint 4" width="700" height="700">
+      <figcaption>Acrylic Paint 4</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Acrylic Paint 5 -->
+<figure>
+      <img src="./source/Acrylic5.jpeg" alt="Acrylic Paint 5" width="700" height="700">
+      <figcaption>Acrylic Paint 5</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Acrylic Paint 6 -->
+<figure>
+      <img src="./source/Acrylic6.jpeg" alt="Acrylic Paint 6" width="700" height="700">
+      <figcaption>Acrylic Paint 6</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Acrylic Paint 7 -->
+<figure>
+      <img src="./source/Acrylic7.jpeg" alt="Acrylic Paint 7" width="700" height="700">
+      <figcaption>Acrylic Paint 7</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Alpona 1 -->
+<figure>
+      <img src="./source/Alpona1.jpeg" alt="Alpona 1" width="700" height="700">
+      <figcaption>Alpona 1</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Alpona 2 -->
+<figure>
+      <img src="./source/Alpona2.jpeg" alt="Alpona 2" width="700" height="700">
+      <figcaption>Alpona 2</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Alpona 3 -->
+<figure>
+      <img src="./source/Alpona3.jpeg" alt="Alpona 3" width="700" height="700">
+      <figcaption>Alpona 3</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Anime 1 -->
+<figure>
+      <img src="./source/Anime1.jpeg" alt="Anime 1" width="700" height="700">
+      <figcaption>Anime 1</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Anime 2 -->
+<figure>
+      <img src="./source/Anime2.jpeg" alt="Anime 2" width="700" height="700">
+      <figcaption>Anime 2</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Caligraphy 1 -->
+<figure>
+      <img src="./source/Caligraphy.jpeg" alt="Caligraphy 1" width="700" height="700">
+      <figcaption>Caligraphy 1</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Charcoal Sketch 1 -->
+<figure>
+      <img src="./source/Charcoal1.jpeg" alt="Charcoal Sketch 1" width="700" height="700">
+      <figcaption>Charcoal Sketch 1</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Charcoal Sketch 2 -->
+<figure>
+      <img src="./source/Charcoal2.jpeg" alt="Charcoal Sketch 2" width="700" height="700">
+      <figcaption>Charcoal Sketch 2</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Clay Art 1 -->
+<figure>
+      <img src="./source/Clay1.jpeg" alt="Clay Art 1" width="700" height="700">
+      <figcaption>Clay Art 1</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Clay Art 2 -->
+<figure>
+      <img src="./source/Clay2.jpeg" alt="Clay Art 2" width="700" height="700">
+      <figcaption>Clay Art 2</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Placeholder Art -->
+<figure>
+      <img src="./source/Design.jpeg" alt="Placeholder Art" width="700" height="700">
+      <figcaption>Placeholder Art</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Lipan Art-->
+<figure>
+      <img src="./source/Lipan.jpeg" alt="Lipan Art" width="700" height="700">
+      <figcaption>Lipan Art</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Mandala Art -->
+<figure>
+      <img src="./source/Mandala.jpeg" alt="Mandala Art" width="700" height="700">
+      <figcaption>Mandala Art</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Circle Mandala -->
+<figure>
+      <img src="./source/MandalaCircle.jpeg" alt="Circle Mandala" width="700" height="700">
+      <figcaption>Circle Mandala</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Dot Mandala on Bottle-->
+<figure>
+      <img src="./source/MandalaDot.jpg" alt="Dot Mandala on Bottle" width="700" height="700">
+      <figcaption>Dot Mandala on Bottle</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Modern Mandala on Bottle-->
+<figure>
+      <img src="./source/MandalaModern.jpeg" alt="Modern Mandala on Bottle" width="700" height="700">
+      <figcaption>Modern Mandala on Bottle</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Motivational -->
+<figure>
+      <img src="./source/Motiv.jpeg" alt="Motivational" width="700" height="700">
+      <figcaption>Motivational</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Pattachitra 1 -->
+<figure>
+      <img src="./source/Pattachita1.jpg" alt="Pattachitra 1" width="700" height="700">
+      <figcaption>Pattachitra 1</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Pattachitra 2 -->
+<figure>
+      <img src="./source/Pattachitra2.jpeg" alt="Pattachitra 2" width="700" height="700">
+      <figcaption>Pattachitra 2</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Pencil Sketch 1 -->
+<figure>
+      <img src="./source/Pencil1.jpeg" alt="Pencil Sketch 1" width="700" height="700">
+      <figcaption>Pencil Sketch 1</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Pencil Sketch 2 -->
+<figure>
+      <img src="./source/Pencil2.jpeg" alt="Pencil Sketch 2" width="700" height="700">
+      <figcaption>Pencil Sketch 2</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Pencil Sketch 3 -->
+<figure>
+      <img src="./source/Pencil3.jpeg" alt="Pencil Sketch 3" width="700" height="700">
+      <figcaption>Pencil Sketch 3</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Pencil Sketch 4 -->
+<figure>
+      <img src="./source/Pencil4.jpeg" alt="Pencil Sketch 4" width="700" height="700">
+      <figcaption>Pencil Sketch 4</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+
+<!-- Rangoli -->
+<figure>
+      <img src="./source/Rangoli.jpeg" alt="Rangoli" width="700" height="700">
+      <figcaption>Rangoli</figcaption>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </figure>
+
+    
+  </div>
+
 </div>
 <!-- partial -->
-  <script src='https://assets.codepen.io/1948355/twitterButton-2.1.0.js'></script>
+  
 </body>
 </html>
