--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1 data-text="PixelCraft">PixelCraft</h1>
-<h2>Art and Crafts by D. Sinarani Patra</h2>
+<i>Art and Crafts by <b>D. Sinarani Patra</b></i>
 <div id="mz-gallery-container">
 
   <div id="mz-gallery">
